--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,14 +2,19 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/style.css">
   <title>Tour guide</title>
 </head>
 
 <body>
+
+  {{> header}}
+
   <div class="container">
     {{{body}}}
   </div>
 
+  {{> footer}}
 </body>
 
 </html>
