--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -4,11 +4,12 @@
   </div>
 
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <h3> Log in</h3>
+    <label for="email"><b>Email address</b></label>
+    <input type="email" placeholder='you@example.com' id="email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder='••••••••' name="psw" required>
 
     <button type="submit">Login</button>
     <label>
@@ -16,7 +17,7 @@
     </label>
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container">
     <button type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
