--- a/src/views/auth/register.hbs
+++ b/src/views/auth/register.hbs
@@ -1,17 +1,17 @@
 <form action="#" style="border:1px solid #ccc">
   <div class="container">
-    <h1>Sign Up</h1>
+    <h3>Sign Up</h3>
     <p>Please fill in this form to create an account.</p>
     <hr>
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <input type="email" placeholder='you@example.com' id="email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder='••••••••' name="psw" required>
 
     <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="password" placeholder='••••••••' name="psw-repeat" required>
 
     <label>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
