--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,4 +1,4 @@
-<form action="#" method="post">
+<form action="#" method="post" class="login">
   <div class="imgcontainer">
     <img src="/img/users/default.jpg" alt="Avatar" class="avatar">
   </div>
@@ -9,7 +9,7 @@
     <input type="email" placeholder='you@example.com' id="email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder='••••••••' name="psw" required>
+    <input type="password" placeholder='••••••••' name="psw" id="password" required>
 
     <button type="submit">Login</button>
     <label>
@@ -18,7 +18,6 @@
   </div>
 
   <div class="container">
-    <button type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
